--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         World's Best Player 
     </h1>
     
-    <img src="assets/image/player.png" alt="this is player photo">
+    <img src="assets/image/player.png" alt="this is player photo" width="25%" >
     <h2>
         Kevin De Bruyne
     </h2>
